Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33564

Date role item in ListModel can't be set via setProperty

    XMLWordPrintable

Details

    • qtdeclarative: 691469c05c882fb290546484448df684976f9233

    Description

      A jsobject listitem entered via ListModel.append with a date variable can not be changed via ListModel.setProperty, yet it can be changed via ListModel.set. Error reported: "Can't create role for unsupported data type".

      Attachments

        1. main.qml
          3 kB
        2. qqmllistmodel.cpp.patch
          0.5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            hcliver Henry Cliver
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes